Commit 3 Jose Alejandro Lafuente Romero- Creacion de conexion para empezar creacion de los CRUD.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
+#config Puerto 
 spring.application.name=leones
 server.port=80
+
+#confic conexion DB 
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.username=ADMLEON
+spring.datasource.password=ADMLEON
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.hibernate.ddl-auto=update
+
+
